data/derived/comb/progs/unify/prog5135.ml.out
Characters 66-69:
  | (h,t) -> if t = true then f h;;
                              ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type unit
